--- a/simple/Simple.Application/Simple.Application.csproj
+++ b/simple/Simple.Application/Simple.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Simple.Domain\Simple.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
