添加mysql ef core, 使用数据库数据代替模拟数据

--- a/simple/Simple.Api/appsettings.Development.json
+++ b/simple/Simple.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=;uid=root;pwd=suvalue@2016;pooling=true;charset=utf8;convert zero datetime=true;port=3306;connection timeout=120;max pool size=512;allow user variables=true;"
+    "DefaultConnection": "server=localhost;database=db_simple;uid=root;pwd=1234qwer;pooling=true;charset=utf8;convert zero datetime=true;port=3306;connection timeout=120;max pool size=512;allow user variables=true;"
   },
   "Security": {
     "Token": {
